--- a/views/index.ejs
+++ b/views/index.ejs
@@ -60,9 +60,9 @@
 				</div>
 				<div class="col-sm-6 col-12 mt-sm-5 mt-1 mb-5 mobile-12">
 					<div class="row mb-4 mt-1 text-center">
-						<h2 class="landing fade-in mb-3 w-100 ">Feel great in the morning for once</h2>
+						<h2 class="landing mb-3 w-100 ">OH S#!T</h2>
 						<!-- <h2 class="landing fade-in mb-3 w-100">Except better.</h2> -->
-						<p class="w-100 h5 mobile-12 ">Try the Verb Caffeinated Energy Bar,</p><p class="w-100 h5 mobile-12">just cover shipping. </p>
+						<p class="w-100 h5 mobile-12 ">Don't get caught with your pants down.</p>
 					</div>
 					<div class="row">
 						<div class="col-6 offset-3">
@@ -70,11 +70,11 @@
 								style="color:white;"
 						  		type="button" 
 						  		class="btn btn-primary" 
-						  		data-item-id="oc-3bar-trial"
-						  		data-item-name="Oats and Cocoa (3 Bar Trial)"
+						  		data-item-id="tp-pack"
+						  		data-item-name="TP Mega Pack"
 						  		data-item-quantity=1
-						  		data-item-image="/img/3bar_trans.png"
-						  		data-item-price=3.95
+						  		data-item-image="/img/main-product.png"
+						  		data-item-price=20
 						  		>
 							    Try Verb
 							  </button>
@@ -177,7 +177,7 @@
 
 
 
-<script src="/js/custom_cart_v_2.4.js"></script>
+<script src="/js/custom_cart.js"></script>
 
 
 
@@ -209,11 +209,11 @@
 
   </div>
 
-  <div id="cart-parent"></div>
+  <!-- <div id="cart-parent"></div> -->
 
   <!-- CUSTOM JS -->
-  <script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
-  <script src="/js/main_v_1_5.js"></script>
+  <!-- <script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script> -->
+  <!-- <script src="/js/main_v_1_5.js"></script> -->
   
 
 </body>
