--- a/public/css/cart.css
+++ b/public/css/cart.css
@@ -3,6 +3,7 @@
 	font-family: "futura-pt",sans-serif;
 	font-style: italic;
 	font-weight: 600;
+	margin-bottom: 0;
 }
 
 .title a {
@@ -60,6 +61,7 @@ nav {
 	padding-top:0px;
 	padding-bottom:0px;
 	margin-left:5px;
+	/*height:30px*/
 	/*padding-right:10px;
 	padding-left:10px;*/
 }
@@ -69,6 +71,7 @@ nav {
 	border-right: 0;
 	border-left: 0;
 	padding:5px;
+	height:40px;
 }
 .cart-plus {
 	border: 1px solid lightgray;
