--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -41,8 +41,8 @@
     <script src="https://js.stripe.com/v3/"></script>
 
   
-  <link rel="stylesheet" href="/css/shop.css">
-  <link rel="stylesheet" href="/css/main-1.css">
+  <!-- <link rel="stylesheet" href="/css/shop.css"> -->
+  <!-- <link rel="stylesheet" href="/css/main-1.css"> -->
   <link rel="stylesheet" href="/css/main-style.css">
 </head>
 
