--- a/views/index.ejs
+++ b/views/index.ejs
@@ -76,10 +76,8 @@
 						  		data-item-image="/img/main-product.png"
 						  		data-item-price=20
 						  		>
-							    Try Verb
+							    Get your TP on
 							  </button>
-							<!-- <a href="#TryVerb">
-							<button class="w-100 landing-button" style="color:white;" type="button">Try Verb</button></a> -->
 						</div>
 					</div>
 				</div>
@@ -97,16 +95,16 @@
   			<div class="col-sm-10 offset-sm-1 col-12" id="about-description">
   				<div class="row">
   					<div class="col-md-4 col-12 mt-5 mb-md-5">
-  						<h4 class="mb-3">Try for free.</h4>
-  						<p class="mb-0">You can try three of our Verb Bars for free – just cover shipping.</p>
+  						<h4 class="mb-3">No more worrying.</h4>
+  						<p class="mb-0">Don't stress about making a TP run when you're in a rush.</p>
   					</div>
   					<div class="col-md-4 col-12 mt-5 mb-md-5">
   						<h4 class="mb-3">Save time and money.</h4>
-  						<p class="mb-0">Skip the line for expensive coffee and grab a Verb Bar.</p>
+  						<p class="mb-0">Our mega-packs are the best bang for your buck.</p>
   					</div>
   					<div class="col-md-4 col-12 mt-5 mb-5">
   						<h4 class="mb-3">Start feeling incredible.</h4>
-  						<p class="mb-0">Powerful energy from wholesome ingredients and organic green tea.</p>
+  						<p class="mb-0">The smoothest wipe you've experienced.</p>
   					</div>
   				</div>	
   			</div>
@@ -135,11 +133,10 @@
 						  		data-item-image="/img/3bar_trans.png"
 						  		data-item-price=3.95
 						  		>
-							    Try Verb
+							    Get your TP on
 							  </button>
 				<p class="mt-3" style="font-size:0.8em; color:gray;">Ingredients: Rolled Oats, Organic Blue Agave, Almond Butter, Organic Puffed Brown Rice, Organic Unsweetened Cocoa Powder, Organic Brown Sugar, Vanilla Extract, Caffeine from Organic Green Tea</p>
 				<p style="font-size:0.8em;"><strong>All ingredients listed are non-GMO, vegan, and gluten-free.</strong></p>
-  				<!-- <a href="#TryVerb"><button class="landing-button" type="button" style="color:white;">Try Verb</button></a> -->
   			</div>
   		</div>
   	</div>
@@ -164,7 +161,7 @@
 						  		data-item-image="/img/3bar_trans.png"
 						  		data-item-price=3.95
 						  		>
-							    Try Verb
+							    Get your TP on
 							  </button>
   			</div>
   			<div class="col-md-3 offset-md-2 col-12 text-center">
