--- a/views/crm/partials/chat-loading.ejs
+++ b/views/crm/partials/chat-loading.ejs
@@ -3,12 +3,11 @@
 		<div class="col-12 message-timestamp active-timestamp mt-3 mb-3 text-center text-muted">
 		</div>
 		<div class="col-12" data-timestamp="<%= message.chat.timestamp %>">
-			<% if(message.chat.sender == 'Verb'){ %>
-				
-				<div class="text-bubble verb-text">
+			<% if(message.chat.sender == 'Company'){ %>
+				<div class="text-bubble company-text">
 					<%= message.chat.message %>
 				</div>
-				<div class="collapse verb-timestamp text-muted">
+				<div class="collapse company-timestamp text-muted">
 					<%= message.chat.timestamp %>
 				</div>
 			<% } else { %>
