--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,46 +3,17 @@
 <head>
   
   <meta charset="utf-8">
-  <title>Verb Energy</title>
+  <title>Monteiro CPSC490</title>
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0' name='viewport' />
-  <meta name="description" content="
-                                    No jitters. No crash. No chemicals. Just focused, all-day, feel-good energy. 
-                                    " />
-  <meta name="author" content="Verb Energy, Inc." />
-  <meta name="copyright" content="2017" />
-  <meta name="robots" content="index, follow" />
-  <meta name="robots" content="noodp, noydir" />
-  <meta name="subject" content="
-                                No jitters. No crash. No chemicals. Just focused, all-day, feel-good energy. 
-                                ">
-  <meta name="Language" content="English">
-  <meta http-eqiv="Expires" content="never">
-  <meta http-eqiv="CACHE-CONTROL" content="NO-CACHE">
-  <meta http-eqiv="PRAGMA" content="NO-CACHE">
-  <meta name="Publisher" content="Verb Energy, Inc">
-  <meta name="Revisit-After" content="10 days">
-  <meta name="distribution" content="Global">
-  <meta name="country" content="USA">
-  <meta name="MSSmartTagsPreventParsing" content="true">
-  <meta name="rating" content="General">
-  <meta name="ms.locale" content="EN-US">
-  <meta name="category" content="homepage">
-  <meta name="url" content="https://www.verbenergybar.com">
-  <meta name="google-site-verification" content="bZwITXADeckUh-kC_elVDED-Ibk2e-DhdZh7jtdU8No" />
+  <meta name="author" content="Andre Monteiro" />
 
-<!-- Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,900|Montserrat+Alternates:400i,700i" rel="stylesheet">
-  <link href="https://cdn.snipcart.com/themes/2.0/base/snipcart.min.css" type="text/css" rel="stylesheet" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
-    <script src="https://js.stripe.com/v3/"></script>
-
-  
-  <!-- <link rel="stylesheet" href="/css/shop.css"> -->
-  <link rel="stylesheet" href="/css/main-1.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+  <script src="https://js.stripe.com/v3/"></script>
   <link rel="stylesheet" href="/css/main-style.css">
 </head>
 
@@ -88,8 +59,8 @@
 
 
 	
-  <!-- ABOUT VERB -->
-  <section id="AboutVerb" class="pb-sm-5">
+  <!-- ABOUT PRODUCT -->
+  <section id="AboutProduct" class="pb-sm-5">
   	<div class="container">
   		<div class="row">
   			<div class="col-sm-10 offset-sm-1 col-12" id="about-description">
@@ -111,72 +82,9 @@
   		</div>
   	</div>
   </section>
-  <!-- END ABOUT VERB -->
+  <!-- END ABOUT PRODUCT -->
 
-  <section id="ProductDesc" class="pt-sm-3">
-  	<div class="container">
-  		<div class="row">
-  			<div class="col-md-6 col-12 pb-sm-0 pb-2">
-  				<img src="/img/ingredients4_small.png">
-  			</div>
-  			<div class="col-md-6 col-12">
-  				<h2 class="mb-3">We keep it simple, wholesome, and tasty</h2>
-  				<!-- <p>Eight simple, healthy ingredients you can feel great about, including rolled oats, almond butter, and puffed brown rice.</p> -->
-  				<p>Smooth almond butter, rich chocolate, and a hint of vanilla come together in a chewy-yet-crunchy taste you’ll fall in love with.</p>
-  				<button class="landing-button main-order-button"
-								style="color:white;"
-						  		type="button" 
-						  		class="btn btn-primary" 
-						  		data-item-id="oc-3bar-trial"
-						  		data-item-name="Oats and Cocoa (3 Bar Trial)"
-						  		data-item-quantity=1
-						  		data-item-image="/img/3bar_trans.png"
-						  		data-item-price=3.95
-						  		>
-							    Get your TP on
-							  </button>
-				<p class="mt-3" style="font-size:0.8em; color:gray;">Ingredients: Rolled Oats, Organic Blue Agave, Almond Butter, Organic Puffed Brown Rice, Organic Unsweetened Cocoa Powder, Organic Brown Sugar, Vanilla Extract, Caffeine from Organic Green Tea</p>
-				<p style="font-size:0.8em;"><strong>All ingredients listed are non-GMO, vegan, and gluten-free.</strong></p>
-  			</div>
-  		</div>
-  	</div>
-  </section>
-
-
-  <section id="TextUs">
-  	<div class="container">
-  		<div class="row">
-  			<div class="col-md-6 col-12 mb-sm-0 mb-3">
-  				<h2 class="mb-sm-3">Convenient, hassle-free ordering with just a text</h2>
-  				<p>When you want more Verb Bars, just text us at <a href="sms://415-915-8372">415-915-VERB</a> (that’s <a href="sms://415-915-8372">415-915-8372</a>) to re-order.</p>
-  				<p>It’s not a robot, it’s actually us — Matt, Bennett, and André. Because that’s how you should treat real people.</p>
-  				<p>Feel free to tell us what you think, ask us questions, or tell us jokes.</p>
-  				<button class="landing-button main-order-button"
-								style="color:white;"
-						  		type="button" 
-						  		class="btn btn-primary" 
-						  		data-item-id="oc-3bar-trial"
-						  		data-item-name="Oats and Cocoa (3 Bar Trial)"
-						  		data-item-quantity=1
-						  		data-item-image="/img/3bar_trans.png"
-						  		data-item-price=3.95
-						  		>
-							    Get your TP on
-							  </button>
-  			</div>
-  			<div class="col-md-3 offset-md-2 col-12 text-center">
-  				<img src="/img/textconversation1.png" style="max-height:500px; width:auto; margin: 0 auto;">
-  			</div>
-  		</div>
-
-  	</div>
-  </section>
-
-
-
-<script src="/js/custom_cart.js"></script>
-
-
+  <script src="/js/custom_cart.js"></script>
 
   <!-- FOOTER -->
   <footer>
@@ -196,22 +104,13 @@
           <div class="footer-content">
             <ul class="footer-list">
               <li class="footer-item">
-                <a href="mailto:team@verbenergybar.com">andre.monteiro@yale.edu</a>
+                <a href="mailto:andre.monteiro@yale.edu">andre.monteiro@yale.edu</a>
               </li>
             </ul>
           </div>
         </div>
       </div>
   </footer>
-
   </div>
-
-  <!-- <div id="cart-parent"></div> -->
-
-  <!-- CUSTOM JS -->
-  <!-- <script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script> -->
-  <!-- <script src="/js/main_v_1_5.js"></script> -->
-  
-
 </body>
 </html>
