--- a/views/dashboard/partials/header.ejs
+++ b/views/dashboard/partials/header.ejs
@@ -1,33 +1,28 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Verb Energy, Inc.</title>
+        <title>Monteiro CPSC490</title>
 
-<!--         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
- -->        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <link rel="stylesheet" href="/css/dashboard.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-        <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.bundle.min.js" integrity="sha384-VspmFJ2uqRrKr3en+IG0cIq1Cl/v/PHneDw6SQZYgrcr8ZZmZoQ3zhuGfMnSR/F2" crossorigin="anonymous"></script> -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     </head>
     <body>
         <nav class="navbar navbar-default">
             <div class="container-fluid">
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="/">Verb</a>
+                    <a class="navbar-brand" href="/">Website</a>
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
-                        <li><a href="/dashboard">Dashboard</a></li>
-                        <li><a href="/texttobuy">Text-to-Buy</a></li>
-                        <li><a href="/orders">Orders</a></li>
-                        <li><a href="/subscriptions">Subscriptions</a></li>
+                        <li><a href="/texttobuy">Dashboard</a></li>
+                        <li><a href="/textorders">Orders</a></li>
+                        <li><a href="/textcustomers">Customers</a></li>
+                        <li><a href="/crm">CRM</a></li>
                         <li><a href="/logout">Logout</a></li>
-
-                    
                     </ul>
-                    
                 </div>
 
             </div>
