--- a/views/crm/text.ejs
+++ b/views/crm/text.ejs
@@ -190,7 +190,7 @@
 
 		function bindEditCard(){
 			$('.edit-card').on('click', function(){
-				$('#new-message').text('You can edit your payment info here: https://www.verbenergybar.com/updatepayment?phone='+$('#active-phone').data('phone'));
+				$('#new-message').text('You can edit your payment info here: https://monteiro-senior-project.herokuapp.com/updatepayment?phone='+$('#active-phone').data('phone'));
 			});
 		}
 
