--- a/views/dashboard/login.ejs
+++ b/views/dashboard/login.ejs
@@ -16,7 +16,7 @@
     <form action="/login" method="post">
         <div class="form-group">
             <label>Username</label>
-            <input type="text" class="form-control" name="username">
+            <input type="text" class="form-control" name="username" autocomplete="off">
         </div>
         <div class="form-group">
             <label>Password</label>
